# ollama-tools-api

./: .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml  run_local_gpu.py
RAG_docs/01-chapter__python-poetry-docker-ollama/: .vscode__launch.json__01-chapter__python-poetry-docker-ollama.txt  .vscode__settings.json__01-chapter__python-poetry-docker-ollama.txt  RAG_docs__main__.vscode__launch.json__main.txt__01-chapter__python-poetry-docker-ollama.txt  RAG_docs__main__.vscode__settings.json__main.txt__01-chapter__python-poetry-docker-ollama.txt  RAG_docs__main__bin__setup_poetry_env.sh__main.txt__01-chapter__python-poetry-docker-ollama.txt  RAG_docs__main__docker-compose.yml__main.txt__01-chapter__python-poetry-docker-ollama.txt  RAG_docs__main__lib__Dockerfile.template__main.txt__01-chapter__python-poetry-docker-ollama.txt  RAG_docs__main__lib__modelfiles__system.txt__main.txt__01-chapter__python-poetry-docker-ollama.txt  RAG_docs__main__lib__start.sh__main.txt__01-chapter__python-poetry-docker-ollama.txt  RAG_docs__main__pyproject.toml__main.txt__01-chapter__python-poetry-docker-ollama.txt  RAG_docs__main__run_local_gpu.py__main.txt__01-chapter__python-poetry-docker-ollama.txt  README.md__01-chapter__python-poetry-docker-ollama.txt  bin__setup_poetry_env.sh__01-chapter__python-poetry-docker-ollama.txt  docker-compose.yml__01-chapter__python-poetry-docker-ollama.txt  lib__Dockerfile.template__01-chapter__python-poetry-docker-ollama.txt  lib__modelfiles__system.txt__01-chapter__python-poetry-docker-ollama.txt  lib__start.sh__01-chapter__python-poetry-docker-ollama.txt  (+2 more)
fastapi_server/: Dockerfile  health-check.sh  pyproject.toml
lib/: Dockerfile.template  start.sh
scripts/: export_branch_txt_for_ollama.py  model_support_check.py
toolbench/: fsm_orchestrator.py  run_tests.py
(+390 files in other folders)
